<resources>
    <string name="app_name">Lowkey LA</string>
    <string name="created">Created By: Down To Code</string>
    <string name="google_maps">Click This Button To Go To Google Maps</string>
    <string name="google_current">After Selecting The Map Click This Button To Get Directions
        From Your Current Location</string>
    <string name="help">Welcome to LowkeyLA!</string>

    <string name="food">Restaurants</string>
    <string name="food_truck">Food Trucks</string>
    <string name="pic_perfect">Picture Perfect</string>
    <string name="museums">Museums</string>
    <string name="cool_places">Cool Places</string>
    <string name="film">Filming Locations</string>
    <string name="about_us">About Us</string>

    <string name="map">Map</string>

    <string name="down_to_code">Down To Code</string>
    <string name="how_we_became">How We Became One</string>
    <string name="mariana">Mariana</string>
    <string name="charlene">Charlene</string>
    <string name="emily">Emily</string>

    <string name="purpose">Down To Code is a group of three that is made up of high
        schoolers. We all come from different backgrounds as well as different lifestyles
        having been brought together by Girls Who Code, a summer immersion program.Down To Code
        built this app to solve the problem of looking like an outsider, an outcast, and worst of
        all looking like a tourist. We want people to take advantage of our app to get out of
        there comfort zone and go out and explore new places. So with Lowkey LA you will be
        able to fit in, know all the hidden spots of Los Angeles and leave your comfort zone.</string>
    
    <string name="personal">Down To Code is a group of three that is made up of high
        schoolers. We all come from different backgrounds as well as different lifestyles
        having been brought together by Girls Who Code, a summer immersion program. </string>

    <string name="charlene_quote">Charlene is 17 years old and currently attending I-Poly
        High School. She is currently a senior and enjoys working with her group as well
        as exploring and trying new places in Los Angeles. </string>

    <string name="emily_quote">Emily is 16 years old and is a senior at Culver City High School.
        She plans to major in computer science and has a goal to pursue a career in Cyber Security.
        She is Mexican, American and enjoys to meet new people and explore different places.</string>

    <string name="mariana_quote">Mariana is a 17 year old. This summer program has made it her
        best summer yet. She is currently a senior at IPoly High School. She enjoys to watch
        Netflix. and trying out different things.</string>

    <string name="about">About the Creators</string>

    <string name="why_created">Down To Code built this app to solve the problem of looking like
        an outsider, an outcast, and worst of all looking like a tourist. We want people to take
        advantage of our app to get out of there comfort zone and go out and explore new places.
        So with our app, LA will be exposed. You will know all the hidden spots, the finest date
        night locations, the best family outings, perfect for any occasion.
</string>

    <string name="jessica_quote">Jessica, our teacher, has inspired us to achieve more than
        expected. She gave us knowledge and mentored us on app development. She is charismatic,
        hilarious, and a true leader. Without her guidance and brilliant brain we would have not
        been able to create the app we have today.</string>


    <string name="jessica">Jessica Hoffman</string>
    <string name="welcome">Welcome</string>
    <string name="thanks">THANKS TO&#8230;</string>
    <string name="special">SPECIAL</string>
    <string name="and_a">AND A</string>

    <string name="to">to</string>
    <string name="lowkey_la">Lowkey LA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_fourth_fragment">FourthFragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps1">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
