<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAqua"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.gwc17.test.MainActivity"
    tools:showIn="@layout/app_bar_main">



    <TextView
        android:id="@+id/created"
        android:layout_width="194dp"
        android:layout_height="31dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:text="@string/created"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteY="464dp"
        tools:layout_editor_absoluteX="95dp"
        app:layout_constraintBottom_toTopOf="@id/google_maps" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:id="@+id/google_maps"
        android:drawableStart="@mipmap/ic_maps"
        tools:layout_editor_absoluteY="296dp"
        tools:layout_editor_absoluteX="8dp"
        android:text="@string/google_maps"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed" />

    <TextView
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:id="@+id/current_location"
        android:layout_below="@+id/google_maps"
        android:drawableStart="@mipmap/ic_direct"
        android:fontFamily="sans-serif-condensed"
        tools:layout_editor_absoluteY="4dp"
        tools:layout_editor_absoluteX="8dp"
        android:text="@string/google_current"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"/>


</android.support.constraint.ConstraintLayout>
