<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:background="@color/colorlightblue"
    android:paddingRight="16dp"
    tools:context="com.example.gwc17.test.About">

     <!--TODO: Update blank fragment layout -->

    <ScrollView
    android:layout_width="363dp"
    android:layout_height="587dp"
    android:layout_alignParentStart="true"
        android:fillViewport="true">


    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
        android:weightSum="1">

        <View
            android:id="@+id/abovedtc"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />
        <TextView
            android:id="@+id/scrolz"
            android:fontFamily="serif-monospace"
            android:text="@string/down_to_code"
            android:textSize="45sp"
            android:textColor="@color/colorDavyGrey"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <View
            android:id="@+id/belowdtc"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <TextView
            android:id="@+id/please"
            android:layout_width="match_parent"
            android:layout_height="188dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/personal"
            android:textSize="20sp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="sans-serif-condensed"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.255"
            android:layout_weight="0.77" />

        <!--<ImageView-->
            <!--android:id="@+id/imageView2"-->
            <!--android:layout_width="97dp"-->
            <!--android:layout_height="93dp"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:contentDescription="@string/charlene"-->
            <!--android:scaleType="fitCenter"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintHorizontal_bias="0.022"-->
            <!--app:layout_constraintLeft_toLeftOf="parent"-->
            <!--app:layout_constraintRight_toRightOf="parent"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintVertical_bias="0.603"-->
            <!--app:srcCompat="@android:drawable/title_bar" />-->



        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"
            android:text="@string/charlene"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="@color/colorDavyGrey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.796"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592" />

        <View
            android:id="@+id/belowChar"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/charlene"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_weight="0.50"
            android:contentDescription="@string/charlene"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/charlene_quote"
            android:textSize="20sp"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.062"
            android:layout_weight="0.09" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emily"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>

        <View
            android:id="@+id/belowEmily"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/emilytwo"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_weight="0.50"
            android:contentDescription="@string/emily"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emily_quote"
            android:textSize="20sp"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorDavyGrey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mariana"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>

        <View
            android:id="@+id/belowMariana"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

<<<<<<< HEAD
        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/mariana"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_weight="0.50"
            android:contentDescription="@string/mariana" />
=======
>>>>>>> 54733b3bd3a05b1092dd19988010d003210bc3f6


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:text="@string/mariana_quote"
            android:textSize="20sp"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="sans-serif-condensed" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/and_a"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/special"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thanks"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="match_parent"
<<<<<<< HEAD
            android:layout_height="60sp"
            android:text="@string/jessica"
=======
            android:layout_height="25sp"
            android:text="Jessica Hoffman"
>>>>>>> 54733b3bd3a05b1092dd19988010d003210bc3f6
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/colorDavyGrey"
            android:fontFamily="serif-monospace"
            android:textStyle="bold"/>
<<<<<<< HEAD

        <ImageView
            android:id="@+id/jessica"
            android:contentDescription="@string/jessica"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_weight="0.50"
            android:padding="15dp"
            android:src="@drawable/who" />
=======
>>>>>>> 54733b3bd3a05b1092dd19988010d003210bc3f6

        <View
            android:id="@+id/belowThanks"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.43" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="285dp"
            android:paddingBottom="40sp"
            android:text="@string/jessica_quote"
            android:textSize="20sp"
            android:lineSpacingExtra="5dp"
            android:textColor="@color/colorDavyGrey"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"/>






    </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>

